variation_study/starcoder2_temp0.0/run1/modern_linkerd_001.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkerd-controller
  namespace: linkerd
spec:
  ports:
    - port: 4191
      targetPort: 8080
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-prometheus
  namespace: linkerd
spec:
  ports:
    - port: 9086
      targetPort: 9086
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-web
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9993
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-dst
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9994
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-tap
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9995
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9996
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9997
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tcp
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9998
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9999
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9992
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-tcp
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9993
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-tcp-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9994
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-tcp-http-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9995
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9996
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9997
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-tcp
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9998
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-tcp-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9999
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-tcp-http-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9992
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9993
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9994
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-tcp
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9995
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-tcp-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9996
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-tcp-http-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9997
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9998
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9999
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-tcp
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9992
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-tcp-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9993
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-tcp-http-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9994
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9995
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9996
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-tcp
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9997
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-tcp-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9998
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-tcp-http-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9999
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9992
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-ws-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9993
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-ws-tcp
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9994
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-ws-tcp-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9995
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-ws-tcp-http-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9996
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-ws-ws
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9997
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-ws-ws-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9998
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-ws-ws-tcp
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9999
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part-of: linkerd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-api-tls-ws-ws-ws-ws-ws-ws-tcp-http
  namespace: linkerd
spec:
  ports:
    - port: 80
      targetPort: 9992
  selector:
    app.kubernetes.io/name: linkerd-proxy-injector
    app.kubernetes.io/part
